manifests/infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: displaydata
  labels:
    app: displaydata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: displaydata
  template:
    metadata:
      labels:
        app: displaydata
    spec:
      containers:
        - name: displaydata
          imagePullPolicy: Always
          image: replace/me/displaydata
          readinessProbe:
            httpGet:
              path: /data
              port: 4001
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /data
              port: 4001
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 15
