manifests/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: displaydata-service
spec:
  type: NodePort
  selector:
    app: displaydata
  ports:
    - name: displaydata
      protocol: TCP
      port: 4001
      targetPort: 4001
