manifests/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: displaydata
spec:
  rules:
  - http:
      paths:
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: displaydata
            port:
              number: 4001
